<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.15" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />


    <TextView
        android:id="@+id/sort_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sort_bottom_sheet_title"
        android:textColor="@color/button_inactive_color"
        android:textSize="@dimen/sort_title_tv_size"
        app:layout_constraintBottom_toTopOf="@+id/guideline"
        app:layout_constraintStart_toStartOf="@+id/divider06"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/divider06"
        android:layout_width="match_parent"
        android:layout_height="@dimen/sort_bottom_sheet_divider06_height"
        android:layout_marginLeft="@dimen/sort_bottom_sheet_divider06_margin_left"
        android:layout_marginRight="@dimen/sort_bottom_sheet_divider06_margin_right"
        android:background="@color/global_layout_border_color"
        app:layout_constraintBottom_toTopOf="@+id/guideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline" />


    <TextView
        android:id="@+id/sort_category_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/sort_bottom_sheet_category_title_margin_top"
        android:text="@string/sort_bottom_sheet_category_title"
        android:textColor="@android:color/black"
        android:textSize="@dimen/sort_bottom_sheet_category_tv_size"
        app:layout_constraintStart_toStartOf="@+id/divider06"
        app:layout_constraintTop_toTopOf="@+id/guideline" />

    <TextView
        android:id="@+id/sort_order_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sort_bottom_sheet_order_title"
        android:textColor="@android:color/black"
        android:textSize="@dimen/sort_bottom_sheet_order_tv_size"
        app:layout_constraintBottom_toBottomOf="@+id/sort_category_title"
        app:layout_constraintStart_toStartOf="@+id/guideline1"
        app:layout_constraintTop_toTopOf="@+id/sort_category_title" />


    <com.google.android.material.button.MaterialButtonToggleGroup
        android:id="@+id/sort_category_options"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/sort_bottom_sheet_category_toggle_group_margin"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="@+id/sort_category_title"
        app:layout_constraintTop_toBottomOf="@+id/sort_category_title"
        app:selectionRequired="true"
        app:singleSelection="true">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/location_sort_category"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/location"
            android:textAllCaps="false" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/infected_sort_category"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/infected"
            android:textAllCaps="false" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/death_sort_category"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/death"
            android:textAllCaps="false" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/recovered_sort_category"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/recovered"
            android:textAllCaps="false" />

    </com.google.android.material.button.MaterialButtonToggleGroup>

    <com.google.android.material.button.MaterialButtonToggleGroup
        android:id="@+id/sort_order_options"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/sort_bottom_sheet_order_toggle_group_margin"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="@+id/sort_order_title"
        app:layout_constraintTop_toBottomOf="@+id/sort_order_title"
        app:selectionRequired="true"
        app:singleSelection="true">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/ascending_sort_order"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ascending"
            android:textAllCaps="false" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/descending_sort_order"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/descending"
            android:textAllCaps="false" />

    </com.google.android.material.button.MaterialButtonToggleGroup>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/sort_done_btn"
        style="?attr/materialButtonOutlinedStyle"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="16dp"
        android:text="@string/sort_done_btn_title"
        android:textColor="@android:color/black"
        android:textSize="@dimen/sort_done_btn_tv_size"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guideline1"
        app:layout_constraintStart_toStartOf="@+id/guideline1"
        app:layout_constraintTop_toBottomOf="@+id/sort_category_options" />

</androidx.constraintlayout.widget.ConstraintLayout>